istio-tunnel-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs1
  namespace: test
spec:
  hosts:
  - example.com
  gateways:
  - mesh
  http:
    - match:
        - headers:
            baggage:
              regex: .*abc=true.*
          uri:
            prefix: "/api"
          ignoreUriCase: true
      rewrite:
        uri: "/"
        authority: example1.com
      route:
        - destination:
            host: example1.com
            port:
              number: 443
    - name: default
      route:
      - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: s1
            port:
              number: 443
  exportTo:
    - "."
    - "istio-system"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: example1-dest
  namespace: test
spec:
  host: example1.com
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
        sni: example1.com
  exportTo:
    - "."
    - "istio-system"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egress-dest
  namespace: test
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: s1
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          sni: example.com
  exportTo:
    - "."
    - "istio-system"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tls-vs
  namespace: test
spec:
  hosts:
  - example.com
  gateways:
  - istio-egressgateway
  tls:
  - match:
    - sniHosts:
        - example.com
    route:
    - destination:
        host: my-externalproxy.com
        subset: tunnel-traffic-to-example1
        port:
          number: 3128
  exportTo:
    - "."
    - "istio-system"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tunnel-dest
  namespace: test
spec:
  host: my-externalproxy.com
  subsets:
  - name: tunnel-traffic-to-example1
    trafficPolicy:
      tunnel:
        targetHost: example.com
        targetPort: 443
        protocol: CONNECT
  exportTo:
    - "."
    - "istio-system"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
  namespace: test
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http-port-for-tls-origination
      protocol: HTTPS
    hosts:
    - example.com
    tls:
      mode: PASSTHROUGH
  - port:
      number: 443
      name: https-port-for-tls-origination
      protocol: TLS
    hosts:
    - example.com
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: example.com
  namespace: test
spec:
  hosts:
  - example.com
  ports:
  - number: 443
    name: http
    protocol: HTTP
  - number: 443
    name: https-port
    protocol: TLS
  resolution: DNS
  exportTo:
    - "."
    - "istio-system"
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: my-externalproxy.com
  namespace: test
spec:
  exportTo:
    - "."
    - "istio-system"
  hosts:
  - my-externalproxy.com
  location: MESH_EXTERNAL
  ports:
  - name: http
    number: 3128
    protocol: HTTP
  - name: tcp
    number: 3128
    protocol: TCP
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: example1.com
  namespace: test
spec:
  exportTo:
    - "."
    - "istio-system"
  hosts:
  - example1.com
  location: MESH_EXTERNAL
  ports:
  - name: http
    number: 443
    protocol: HTTP
  - name: https-port
    number: 443
    protocol: TLS
  resolution: DNS
